--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 header {
   font-size: Large;
   font-style: oblique;
-    font-family:'Courier New';
+  font-family:'Courier New';
+  box-shadow: 0px 5px 8px black;
 }
 
 body{
@@ -9,12 +10,16 @@ body{
 }
 
 h1{
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-shadow: 3px 3px 2px black;
     text-align:center;
     padding: 80px;
 }
 
 input{
     text-align: center;
+    box-shadow: 3px 3px 2px black;
 }
 
 form{
@@ -23,10 +28,15 @@ form{
 
 footer{
     text-align: center;
+    color: white;
+    font-style: italic;
+    font-weight: 600;
+    text-shadow: 2px 2px 2px black;
 }
 
 p{
     text-align: center;
+    
 }
 
 #imageContainer{
@@ -37,5 +47,15 @@ p{
 }
 
 .navbar-custom{
+    color: white;
     background-color: rgb(46, 20, 119);
+    text-shadow: 3px 3px 2px black;
+}
+.navbar-brand{
+    color: white;
+    text-shadow: 3px 3px 2px black;
+}
+.nav-link{
+    color: white;
+    text-shadow: 3px 3px 2px black;
 }
